--- a/Тестирование/Unit-тестирование JS/Честность и хрупкость.md
+++ b/Тестирование/Unit-тестирование JS/Честность и хрупкость.md
@@ -1,7 +1,7 @@
 **Честность
 
 Если тест <span style="color:#00aa00">зеленый</span>, то это означает, что тестируемый модуль работает корректно.
-Если тест <span style="color:aa0000">красный</span>, то это означает, что проблемы *только* в тестируемом модуле и нигде иначе.
+Если тест <span style="color:ff0000">красный</span>, то это означает, что проблемы *только* в тестируемом модуле и нигде иначе.
 
 При тестировании модуля А, который имеет в качестви зависимости модуль В, необходимо подставлять В' (заглушку) и имитировать успешную работу для того, чтобы ошибка в модуле В не привела к падению А.
 
