--- a/Архитектура/SOLID/1. SRP - Single responsibility principle.md
+++ b/Архитектура/SOLID/1. SRP - Single responsibility principle.md
@@ -3,8 +3,8 @@
 Модуль должен иметь только одну причину для изменения. 
 Каждый модуль <span style="text-decoration: underline;">должен отвечать</span> только за то, за что он <span style="text-decoration: underline;">должен отвечать</span>
 
-Не стоит в классе определять вообще весь функционал, чтобы при модификации какой-то отдельно взятой структуры не пришлось вносить изменения в сам класс.
-Если класс отвечаает за одно <span style="text-decoration: underline;">и</span> за второе, то такой класс непременно должен быть разбит на составляюшие
+Не стоит в модуле определять вообще весь функционал, чтобы при модификации какой-то отдельно взятой структуры не пришлось вносить изменения в сам модуль.
+Если модуль отвечаает за одно <span style="text-decoration: underline;">и</span> за второе, то такой модуль непременно должен быть разбит на составляюшие
 
 Рассмотрим два примера для загрузки файлов на сервер:
 
@@ -14,7 +14,7 @@ class Upload {
 	uploadFile(...args)
 }
 ```
-<div style="text-align:center; color: #999">Плохой пример</div>
+<div style="text-align:center; color: #aa0000">Плохой пример</div>
 
 ```
 class Upload {
@@ -24,7 +24,7 @@ class Upload {
 	uploadMusic(...args)
 }
 ```
-<div style="text-align:center; color: #999">Хороший пример</div>
+<div style="text-align:center; color: #00aa00">Хороший пример</div>
 
 В первом примере для обновления обработчика только для видеофайлов приходится вносить изменения в сам метод, в котором реализованы и другие обработчики, что нарушает текущий принцип. Так как при изменении одной сущности мы будем влиять на другие
 
