--- a/Архитектура/SOLID/1. SRP - Single responsibility principle.md
+++ b/Архитектура/SOLID/1. SRP - Single responsibility principle.md
@@ -1,10 +1,13 @@
 ### Принцип единственной ответственности
 
+Ось изменения только для одного актора
+
+
 Модуль должен иметь только одну причину для изменения. 
 Каждый модуль <span style="text-decoration: underline;">должен отвечать</span> только за то, за что он <span style="text-decoration: underline;">должен отвечать</span>
 
 Не стоит в модуле определять вообще весь функционал, чтобы при модификации какой-то отдельно взятой структуры не пришлось вносить изменения в сам модуль.
-Если модуль отвечаает за одно <span style="text-decoration: underline;">и</span> за второе, то такой модуль непременно должен быть разбит на составляюшие
+Если модуль отвечает за одно <span style="text-decoration: underline;">и</span> за второе, то такой модуль непременно должен быть разбит на составляющие
 
 Рассмотрим два примера для загрузки файлов на сервер:
 
