--- a/Архитектура/Паттерны/Закон Деметры.md
+++ b/Архитектура/Паттерны/Закон Деметры.md
@@ -1,3 +1,3 @@
 *стр 126 Чистый код
 
-Модуль нe должен знать внутреннее устройство тех объектов, с которыми он работает
+Модуль не должен знать внутреннее устройство тех объектов, с которыми он работает
